# matdb

./: Cargo.toml  README.md
.github/workflows/: rust-build.yml  rust-clippy.yml  rust-tests.yml  rust.yml
examples/: sensor-log.rs
src/: block.rs  buffer.rs  cache.rs  database.rs  lib.rs  query.rs  scan.rs  schema.rs  segment.rs  storage.rs  transaction.rs
tests/: matdb.rs
