[package]
name = "matdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
env_logger = "0.10.0"
flate2 = "1.0.25"
glob = "0.3.0"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
zstd = "0.12.0"
